--- a/terraform/modules/hub/files/prometheus/prometheus.yml
+++ b/terraform/modules/hub/files/prometheus/prometheus.yml
@@ -73,13 +73,6 @@ scrape_configs:
     dns_sd_configs:
       - names:
           - 'frontend.hub.local'
-  - job_name: saml-engine
-    scheme: 'https'
-    tls_config:
-      insecure_skip_verify: true
-    dns_sd_configs:
-      - names:
-          - 'saml-engine-fargate.hub.local'
   - job_name: apps
     scheme: 'https'
     metrics_path: '/prometheus/metrics'
@@ -115,6 +108,7 @@ scrape_configs:
     dns_sd_configs:
       - names:
           - "${deployment}-config-v2-fargate.hub.local"
+          - "${deployment}-saml-engine-fargate.hub.local"
     relabel_configs:
       - source_labels: [__meta_dns_name]
         target_label: job
